# The-Greedy-Snake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Records.md  build.bat
src/GLSL/: fragmentSource.glsl  vertexSource.glsl
src/include/Core/: Shader.h
src/include/Game/: Map.h
src/include/Utils/: OpenGLErrors.h  Utils.h
src/source/: game.cpp
src/source/Core/: Shader.cpp
src/source/Game/: Map.cpp
src/source/Utils/: OpenGLErrors.cpp  Utils.cpp
